// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Products.vue storeを用意してレンダリングのテスト 1`] = `
<div>
    <h1 class="title">All Products
        <p>3 products</p>
        <table class="table is-striped">
            <thead>
                <tr>
                    <th>Name</th>
                    <th>Description</th>
                    <th>Price</th>
                </tr>
            </thead>
            <tbody>
                <tr track-by="id">
                    <td>a</td>
                    <td>A</td>
                    <td>$1</td>
                    <td>
                        <button class="button is-info">Add to cart</button>
                    </td>
                </tr>
                <tr track-by="id">
                    <td>b</td>
                    <td>B</td>
                    <td>$2</td>
                    <td>
                        <button class="button is-info">Add to cart</button>
                    </td>
                </tr>
                <tr track-by="id">
                    <td>c</td>
                    <td>C</td>
                    <td>$3</td>
                    <td>
                        <button class="button is-info">Add to cart</button>
                    </td>
                </tr>
            </tbody>
        </table>
    </h1>
</div>
`;

exports[`Products.vue 初期状態のレンダリングのテスト 1`] = `
<div>
    <h1 class="title">All Products
        <p>3 products</p>
        <table class="table is-striped">
            <thead>
                <tr>
                    <th>Name</th>
                    <th>Description</th>
                    <th>Price</th>
                </tr>
            </thead>
            <tbody>
                <tr track-by="id">
                    <td>COBOL 101 vintage</td>
                    <td>Learn COBOL with this vintage programming book</td>
                    <td>$399</td>
                    <td>
                        <button class="button is-info">Add to cart</button>
                    </td>
                </tr>
                <tr track-by="id">
                    <td>Sharp C2719 curved TV</td>
                    <td>Watch TV like never before with the brand new curved screen technology</td>
                    <td>$1995</td>
                    <td>
                        <button class="button is-info">Add to cart</button>
                    </td>
                </tr>
                <tr track-by="id">
                    <td>Remmington X mechanical keyboard</td>
                    <td>Excellent for gaming and typing, this Remmington X keyboard features tactile, clicky switches for speed and accuracy</td>
                    <td>$595</td>
                    <td>
                        <button class="button is-info">Add to cart</button>
                    </td>
                </tr>
            </tbody>
        </table>
    </h1>
</div>
`;
